Fixed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
+/.idea
+/.idea/Insanalytics.iml
+/.idea/markdown-navigator
+/.idea/markdown-navigator.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+
